--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.91.1",
+    "crypto-js": "^4.2.0",
     "google-auth-library": "^10.5.0",
     "google-spreadsheet": "^5.0.2",
     "lucide-react": "^0.330.0",
